# dbdd

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.docs/: cahier des charges.md
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/docs/plans/: 2026-03-05-differentiator-features-design.md  2026-03-05-differentiator-implementation.md  2026-03-05-game-breaker-features-design.md  2026-03-05-game-breaker-implementation.md
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  notification.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  state.rs
apps/desktop/src-tauri/src/commands/: connection.rs  files.rs  mod.rs  query.rs  schema.rs
apps/desktop/src/components/: ErrorBoundary.tsx
apps/desktop/src/components/admin/: ProcessList.tsx
apps/desktop/src/components/ai/: AiChatPanel.tsx  AiMessage.tsx  AiProviderConfig.tsx  AiResultDialog.tsx
apps/desktop/src/components/alerts/: AlertBadge.tsx  AlertManager.tsx  ScheduledQueryDialog.tsx
apps/desktop/src/components/connection/: ConnectionCard.tsx  ConnectionDialog.tsx  ConnectionForm.tsx  ConnectionList.tsx  ConnectionStatus.tsx
apps/desktop/src/components/dashboard/: DashboardManager.tsx  DashboardView.tsx  WidgetCard.tsx  WidgetConfigDialog.tsx
apps/desktop/src/components/data-gen/: DataGeneratorDialog.tsx  ProviderSelect.tsx
apps/desktop/src/components/diff/: DataDiffView.tsx  DiffCell.tsx
apps/desktop/src/components/editor/: CodePreview.tsx  CodemirrorEditor.tsx  CsvImportDialog.tsx  EditorTabs.tsx  EditorToolbar.tsx  QueryHistory.tsx  QueryTimeline.tsx  SqlEditor.tsx
apps/desktop/src/components/er-diagram/: ERDiagramView.tsx  ERToolbar.tsx  RelationEdge.tsx  TableNode.tsx
apps/desktop/src/components/grid/: ColumnFilter.tsx  DataGrid.tsx  FilterBar.tsx  QuickLook.tsx  TableStructureView.tsx
apps/desktop/src/components/health/: ActiveConnections.tsx  AlertConfig.tsx  AlertHistory.tsx  HealthDashboard.tsx  LiveMetrics.tsx  MetricChart.tsx  SlowQueryList.tsx  StorageOverview.tsx
apps/desktop/src/components/import-export/: ExportDialog.tsx  ImportDialog.tsx
apps/desktop/src/components/layout/: ActivityBar.tsx  AppLayout.tsx  CommandPalette.tsx  OpenAnything.tsx  PanelLayout.tsx  PreferencesDialog.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx  WelcomeScreen.tsx
apps/desktop/src/components/masking/: MaskingConfig.tsx  MaskingToggle.tsx
apps/desktop/src/components/migration/: SchemaDiff.tsx  SchemaMigrationView.tsx
apps/desktop/src/components/notes/: NoteEditor.tsx  NoteIndicator.tsx  NotesPanel.tsx
apps/desktop/src/components/profiler/: ExplainTreeView.tsx  ExplainView.tsx  PlanNodeCard.tsx
apps/desktop/src/components/query-builder/: BuilderToolbar.tsx  FilterPanel.tsx  JoinEdge.tsx  QueryBuilderView.tsx  SQLPreview.tsx  TableBlock.tsx
apps/desktop/src/components/schema/: TableDesigner.tsx
apps/desktop/src/hooks/: useKeyboardShortcut.ts  useModal.ts  useTauriEvent.ts
apps/desktop/src/lib/: builtInThemes.ts  connectionUrl.ts  constants.ts  copyFormats.ts  dataGenProviders.ts  dataMasking.ts  exportFormats.ts  fileOps.ts  fonts.ts  fuzzy-scorer.ts  fuzzy-search-bridge.ts  ipc.ts  memory-manager.ts  menuBridge.ts  notifications.ts  platform.ts  queryVersioning.ts  sessionRecovery.ts  sharing.ts  sql-utils.ts  themeTypes.ts  types.ts
apps/desktop/src/pages/: WelcomePage.tsx  WorkspacePage.tsx
apps/desktop/src/stores/: activityStore.ts  aiStore.ts  alertStore.ts  changeStore.ts  connectionStore.ts  dashboardStore.ts  dataGenStore.ts  erDiagramStore.ts  favoritesStore.ts  filterStore.ts  importExportStore.ts  migrationStore.ts  monitoringStore.ts  notesStore.ts  preferencesStore.ts  queryBuilderStore.ts  queryStore.ts  resultStore.ts  schemaStore.ts  shortcutStore.ts  snippetStore.ts  tableDesignerStore.ts  themeStore.ts  toastStore.ts  uiStore.ts
apps/desktop/src/styles/: globals.css
apps/desktop/src/workers/: export.worker.ts  fuzzy-search.worker.ts  grid.worker.ts
crates/dataforge-config/: Cargo.toml
crates/dataforge-config/src/: crypto.rs  lib.rs  migrations.rs  store.rs
crates/dataforge-core/: Cargo.toml
crates/dataforge-core/src/: error.rs  lib.rs
crates/dataforge-core/src/models/: columnar.rs  connection.rs  mod.rs  types.rs
crates/dataforge-core/src/ports/: connection.rs  repository.rs  schema.rs
crates/dataforge-engine/: Cargo.toml
crates/dataforge-engine/src/: connection_manager.rs  driver_registry.rs  event_bus.rs  schema_cache.rs
crates/dataforge-mysql/: Cargo.toml
crates/dataforge-mysql/src/: connection.rs  dialect.rs  lib.rs  schema_inspector.rs  type_mapping.rs
crates/dataforge-postgres/: Cargo.toml
crates/dataforge-postgres/src/: connection.rs  dialect.rs  lib.rs  schema_inspector.rs  type_mapping.rs
crates/dataforge-sqlite/: Cargo.toml
crates/dataforge-sqlite/src/: connection.rs  dialect.rs  schema_inspector.rs  type_mapping.rs
crates/purrql-config/: Cargo.toml
crates/purrql-config/src/: crypto.rs  migrations.rs  store.rs
crates/purrql-core/: Cargo.toml
crates/purrql-core/src/: error.rs
crates/purrql-core/src/models/: columnar.rs  connection.rs  mod.rs  query.rs  schema.rs
crates/purrql-core/src/ports/: connection.rs  dialect.rs  mod.rs
crates/purrql-engine/: Cargo.toml
crates/purrql-engine/src/: connection_manager.rs  driver_registry.rs  event_bus.rs  lib.rs  schema_cache.rs
crates/purrql-mysql/: Cargo.toml
crates/purrql-mysql/src/: connection.rs  dialect.rs  lib.rs  schema_inspector.rs  type_mapping.rs
crates/purrql-postgres/: Cargo.toml
crates/purrql-postgres/src/: connection.rs  dialect.rs  lib.rs  schema_inspector.rs  type_mapping.rs
crates/purrql-sqlite/: Cargo.toml
crates/purrql-sqlite/src/: connection.rs  dialect.rs  lib.rs  schema_inspector.rs  type_mapping.rs
docs/plans/: 2026-03-04-copy-favorites-prefs-session.md  2026-03-04-phase1-safe-mode-commit-workflow.md  2026-03-04-tableplus-killer-roadmap-design.md
(+41 files in other folders)
