[package]
name = "dataforge-config"
version = "0.1.0"
edition = "2021"

[dependencies]
dataforge-core = { path = "../dataforge-core" }
rusqlite = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
keyring = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
