[package]
name = "dataforge-engine"
version = "0.1.0"
edition = "2021"

[features]
default = ["mysql", "sqlite", "postgres"]
mysql = ["dataforge-mysql"]
sqlite = ["dataforge-sqlite"]
postgres = ["dataforge-postgres"]

[dependencies]
dataforge-core = { path = "../dataforge-core" }
dataforge-config = { path = "../dataforge-config" }
dataforge-mysql = { path = "../dataforge-mysql", optional = true }
dataforge-sqlite = { path = "../dataforge-sqlite", optional = true }
dataforge-postgres = { path = "../dataforge-postgres", optional = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tauri = { workspace = true }
