[package]
name = "purrql-config"
version = "0.1.0"
edition = "2021"

[dependencies]
purrql-core = { path = "../purrql-core" }
serde = { workspace = true }
serde_json = { workspace = true }
keyring = { workspace = true }
aes-gcm = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
rusqlite = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
