[package]
name = "purrql-postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
purrql-core = { path = "../purrql-core" }
sqlx = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
