[package]
name = "purrql-sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
purrql-core = { path = "../purrql-core" }
rusqlite = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
