[package]
name = "dataforge-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
dataforge-core = { path = "../../../crates/dataforge-core" }
dataforge-engine = { path = "../../../crates/dataforge-engine" }
dataforge-config = { path = "../../../crates/dataforge-config" }
dataforge-mysql = { path = "../../../crates/dataforge-mysql" }
dataforge-sqlite = { path = "../../../crates/dataforge-sqlite" }
dataforge-postgres = { path = "../../../crates/dataforge-postgres" }
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
