[package]
name = "purrql-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
purrql-core = { path = "../../../crates/purrql-core" }
purrql-engine = { path = "../../../crates/purrql-engine" }
purrql-config = { path = "../../../crates/purrql-config" }
purrql-mysql = { path = "../../../crates/purrql-mysql" }
purrql-sqlite = { path = "../../../crates/purrql-sqlite" }
purrql-postgres = { path = "../../../crates/purrql-postgres" }
tauri = { workspace = true }
tauri-plugin-stronghold = "2"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rfd = "0.15"
tauri-plugin-notification = "2"

[features]
devtools = ["tauri/devtools"]
